# Auto-abstarct-screening

./: .env.example  .gitignore  LLM_Abstract_Screening.spec  LLM_Abstract_Screening_mac.spec  LOCAL_INSTALL.md  PACKAGING.md  README.md  Start-Windows.bat  Start-macOS.command  build_mac_app.sh  build_windows_exe.ps1  pyproject.toml
.github/workflows/: build-release.yml
backend/: __init__.py  app_settings.py  config.py  criteria_prompting.py  criteria_service.py  desktop.py  ingestion.py  llm.py  main.py  models.py  project_manager.py  prompting.py  review_manager.py  run_manager.py  service.py
scripts/: Start-Windows.ps1
static/: home.js  project.js  review.js  styles.css
templates/: home.html  project_step.html  review_workspace.html
tests/: test_ingestion.py  test_llm.py  test_prompting.py
